Project

General

Profile

Actions

Bug #47201

closed

mds: CDir::_omap_commit(int): Assertion `committed_version == 0' failed.

Added by Patrick Donnelly over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Q/A
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS
Labels (FS):
crash
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2020-08-24T22:45:16.227 INFO:tasks.ceph.mds.a.smithi066.stderr:ceph-mds: /build/ceph-16.0.0-4674-ge1f3826a2a2/src/mds/CDir.cc:2262: void CDir::_omap_commit(int): Assertion `committed_version == 0' failed.
2020-08-24T22:45:16.227 INFO:tasks.ceph.mds.a.smithi066.stderr:*** Caught signal (Aborted) **
2020-08-24T22:45:16.227 INFO:tasks.ceph.mds.a.smithi066.stderr: in thread 7f47c615f700 thread_name:MR_Finisher
2020-08-24T22:45:16.228 INFO:tasks.ceph.mds.a.smithi066.stderr: ceph version 16.0.0-4674-ge1f3826a2a2 (e1f3826a2a2c2eb7615e00c65b6c313ec0f4b309) pacific (dev)
2020-08-24T22:45:16.228 INFO:tasks.ceph.mds.a.smithi066.stderr: 1: (()+0x128a0) [0x7f47d3b5e8a0]
2020-08-24T22:45:16.228 INFO:tasks.ceph.mds.a.smithi066.stderr: 2: (gsignal()+0xc7) [0x7f47d2c56f47]
2020-08-24T22:45:16.229 INFO:tasks.ceph.mds.a.smithi066.stderr: 3: (abort()+0x141) [0x7f47d2c588b1]
2020-08-24T22:45:16.229 INFO:tasks.ceph.mds.a.smithi066.stderr: 4: (()+0x3042a) [0x7f47d2c4842a]
2020-08-24T22:45:16.229 INFO:tasks.ceph.mds.a.smithi066.stderr: 5: (()+0x304a2) [0x7f47d2c484a2]
2020-08-24T22:45:16.229 INFO:tasks.ceph.mds.a.smithi066.stderr: 6: (CDir::_omap_commit(int)+0x15e4) [0x55ae793e1074]
2020-08-24T22:45:16.229 INFO:tasks.ceph.mds.a.smithi066.stderr: 7: (CDir::_commit(unsigned long, int)+0x285) [0x55ae793e1405]
2020-08-24T22:45:16.230 INFO:tasks.ceph.mds.a.smithi066.stderr: 8: (CDir::commit(unsigned long, MDSContext*, bool, int)+0x200) [0x55ae793e1bc0]
2020-08-24T22:45:16.230 INFO:tasks.ceph.mds.a.smithi066.stderr: 9: (LogSegment::try_to_expire(MDSRank*, C_GatherBuilderBase<MDSContext, C_GatherBase<MDSContext, C_MDSInternalNoop> >&, int)+0x96c) [0x55ae7950055c]
2020-08-24T22:45:16.230 INFO:tasks.ceph.mds.a.smithi066.stderr: 10: (MDLog::try_expire(LogSegment*, int)+0x69) [0x55ae7948ebb9]
2020-08-24T22:45:16.230 INFO:tasks.ceph.mds.a.smithi066.stderr: 11: (MDLog::trim_all()+0x5a3) [0x55ae79490693]
2020-08-24T22:45:16.230 INFO:tasks.ceph.mds.a.smithi066.stderr: 12: (LambdaContext<C_Flush_Journal::clear_mdlog()::{lambda(int)#2}>::finish(int)+0x233) [0x55ae791c7be3]
2020-08-24T22:45:16.231 INFO:tasks.ceph.mds.a.smithi066.stderr: 13: (Context::complete(int)+0x9) [0x55ae7918db59]
2020-08-24T22:45:16.231 INFO:tasks.ceph.mds.a.smithi066.stderr: 14: (MDSContext::complete(int)+0x52) [0x55ae7947ffd2]
2020-08-24T22:45:16.231 INFO:tasks.ceph.mds.a.smithi066.stderr: 15: (C_IO_Wrapper::finish(int)+0xe) [0x55ae79480c2e]
2020-08-24T22:45:16.231 INFO:tasks.ceph.mds.a.smithi066.stderr: 16: (MDSContext::complete(int)+0x52) [0x55ae7947ffd2]
2020-08-24T22:45:16.232 INFO:tasks.ceph.mds.a.smithi066.stderr: 17: (MDSIOContextBase::complete(int)+0x233) [0x55ae79480483]
2020-08-24T22:45:16.232 INFO:tasks.ceph.mds.a.smithi066.stderr: 18: (C_IO_Wrapper::complete(int)+0x115) [0x55ae79480ba5]
2020-08-24T22:45:16.232 INFO:tasks.ceph.mds.a.smithi066.stderr: 19: (Finisher::finisher_thread_entry()+0x195) [0x7f47d429ce55]
2020-08-24T22:45:16.232 INFO:tasks.ceph.mds.a.smithi066.stderr: 20: (()+0x76db) [0x7f47d3b536db]
2020-08-24T22:45:16.232 INFO:tasks.ceph.mds.a.smithi066.stderr: 21: (clone()+0x3f) [0x7f47d2d39a3f]

From: /ceph/teuthology-archive/pdonnell-2020-08-24_21:54:31-fs-wip-pdonnell-testing-20200824.202017-distro-basic-smithi/5372994/teuthology.log

Commit adding the assertion: d8a6715b0740bebfe7922391868aae2df304db6b


Related issues 5 (0 open5 closed)

Related to CephFS - Bug #46273: mds: deleting a large number of files in a directory causes the file system to read onlyResolvedwei qiaomiao

Actions
Related to CephFS - Bug #48249: mds: dir->mark_new should together with dir->mark_dirtyResolvedZheng Yan

Actions
Has duplicate CephFS - Bug #47744: nautilus: CDir::_omap_commit(int): Assertion `committed_version == 0' failed during `flush journal`Duplicate

Actions
Copied to CephFS - Backport #47316: octopus: mds: CDir::_omap_commit(int): Assertion `committed_version == 0' failed.ResolvedNathan CutlerActions
Copied to CephFS - Backport #47317: nautilus: mds: CDir::_omap_commit(int): Assertion `committed_version == 0' failed.ResolvedNathan CutlerActions
Actions #1

Updated by Patrick Donnelly over 3 years ago

  • Related to Bug #46273: mds: deleting a large number of files in a directory causes the file system to read only added
Actions #2

Updated by Patrick Donnelly over 3 years ago

  • Backport set to octopus,nautilus
Actions #3

Updated by Nathan Cutler over 3 years ago

Backporting note:

  • octopus backport should be done together with #46273
  • nautilus backport has no dependency and can be done "as usual"
Actions #4

Updated by Zheng Yan over 3 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 36902
Actions #5

Updated by Patrick Donnelly over 3 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Assignee set to Zheng Yan
Actions #6

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47316: octopus: mds: CDir::_omap_commit(int): Assertion `committed_version == 0' failed. added
Actions #7

Updated by Nathan Cutler over 3 years ago

  • Copied to Backport #47317: nautilus: mds: CDir::_omap_commit(int): Assertion `committed_version == 0' failed. added
Actions #8

Updated by Patrick Donnelly over 3 years ago

  • Has duplicate Bug #47744: nautilus: CDir::_omap_commit(int): Assertion `committed_version == 0' failed during `flush journal` added
Actions #9

Updated by Nathan Cutler over 3 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions #10

Updated by Zheng Yan over 3 years ago

  • Related to Bug #48249: mds: dir->mark_new should together with dir->mark_dirty added
Actions

Also available in: Atom PDF