mds: fix incorrect check for if dirfrag is being fragmented

Fixes: https://tracker.ceph.com/issues/47201
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>
(cherry picked from commit cb2cc228dadf3e5d5cd75835365b91a43c941453)

Conflicts:
	src/mds/CDir.cc
- op.stat() takes different kind of null arguments in nautilus, but this
  is not relevant to the backport